# giant-news

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  pytest.ini  settings.py  setup.cfg
.github/workflows/: build-publish-dev.yml  build-test.yml
giant_news/: admin.py  apps.py  cms_apps.py  cms_plugins.py  forms.py  sitemaps.py  urls.py  views.py
giant_news/migrations/: 0001_initial.py  0002_relatedarticlecardplugin_relatedarticleplugin.py  0003_alter_article_content.py  0004_auto_20220601_0915.py  0005_auto_20220912_0459.py  0006_alter_article_author_alter_article_category_and_more.py  0007_relatedarticleplugin_title.py
giant_news/models/: __init__.py  article.py  plugin.py
giant_news/templates/news/: detail.html  index.html
giant_news/templates/plugins/related_articles/: container.html  item.html
giant_news/tests/: test_cms_apps.py  test_forms.py  test_models.py  test_views.py  urls.py
news/: admin.py  apps.py  cms_apps.py  cms_plugins.py  forms.py  models.py  sitemaps.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_auto_20200624_1135.py  0002_auto_20200624_1539.py  0003_auto_20200624_1136.py  0003_auto_20200624_1539.py  0004_article_category.py  0005_relatedarticlecardplugin_relatedarticleplugin.py  0006_auto_20201111_0631.py  0006_auto_20201111_0809.py  0007_auto_20210812_0751.py  0008_update_default_ordering.py  0009_add_searchable_plugin_text.py
news/templates/: index.html  news_detail.html  news_index.html
news/templates/news/: detail.html  index.html  news_detail.html  news_index.html
news/tests/: test_cms_apps.py  test_forms.py  test_models.py  test_views.py  urls.py
tests/: test_giant_news.py
