[tool.poetry]
name = "giant-news"
version = "0.5.1"
description = "A small reusable package that adds a News app to a project"
authors = ["Will-Hoey <will.hoey@giantmade.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/giantmade/giant-news"
repository = "https://github.com/giantmade/giant-news"
keywords = ["news", "app"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

include = [
    "LICENSE",
]
packages = [
    { include = "news" }
]

[tool.poetry.dependencies]
python = "^3.6"
giant-mixins = "*"
django-filer = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
django = "^3"
django-cms = "^3"
black = "^19.10b0"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
six = "^1.15.0"
django-polymorphic = "3.0.0"

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/simple/"
secondary = true

[tool.black]
line-length = 99
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.ipython
  | \.mypy_cache
  | \.ropeproject
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"